# federated-regressive-learning

./: .dockerignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml
configs/: datasets.yaml  optimizers.yaml  scenarios.yaml  train_default.yaml
docker/: Dockerfile  Dockerfile.cpu  Dockerfile.cuda
docs/: CHANGELOG.md  DOCKER.md  PRIVACY.md  REPRODUCIBILITY.md  SCENARIOS.md
env/: environment.yml  requirements.txt
examples/: README.md
examples/cifar10_s2/: README.md  inspect_weights.py  run.sh
examples/mnist_s1/: README.md  inspect_weights.py  run.sh
frl/: __init__.py  aggregation.py  algo_frl.py  baselines.py  metrics.py  utils.py
frl/data/: loaders.py  transforms.py  ugei_placeholder.py
frl/scenarios/: s1_equal_dist_diff_size.yaml  s2_hetero_dist_diff_size.yaml  s3_class_missing.yaml  scenario_gen.py
scripts/: __init__.py  make_fig_tables.py  reproduce_all.sh  run_federated.py
tests/: test_algo_frl.py  test_integration.py  test_scenario_gen.py
